<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/operate_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/collect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/mag_collect"/>
            <RadioButton
                android:id="@+id/locate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mag_locate"/>
        </RadioGroup>

        <TextView
            android:id="@+id/use_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="20sp"
            android:text="@string/time_init"/>
    </LinearLayout>

    <!--<EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="请输入采样坐标"
        android:text="0,0-0,0"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_point"/>
        <EditText
            android:id="@+id/sx_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_sx"
            android:gravity="center"
            android:inputType="numberSigned|numberDecimal"/>
        <EditText
            android:id="@+id/sy_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_sy"
            android:gravity="center"
            android:inputType="numberSigned|numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_point"/>
        <EditText
            android:id="@+id/ex_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_ex"
            android:gravity="center"
            android:inputType="numberSigned|numberDecimal"/>
        <EditText
            android:id="@+id/ey_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_ey"
            android:gravity="center"
            android:inputType="numberSigned|numberDecimal"/>
    </LinearLayout>
    <EditText
        android:id="@+id/freq_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_freq"
        android:inputType="number"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/start_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_record"/>
        <Button
            android:id="@+id/stop_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_record"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/get_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/get_position"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/query_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query_collect"/>
        <Button
            android:id="@+id/delete_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_collect"/>
        <EditText
            android:id="@+id/id_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_id"
            android:gravity="center"
            android:inputType="number"/>
        <Button
            android:id="@+id/delete_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_one"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/mag_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mag_text" />
        <TextView
            android:id="@+id/dir_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dir_text"/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query_info"/>
    <com.jc.wifimagips.SlowScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/mag_series_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="true"
                android:textIsSelectable="true"
                android:focusable="true"
                android:longClickable="true"/>
            <!--<Button
                android:id="@+id/del_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="删除"/>-->
        </LinearLayout>
    </com.jc.wifimagips.SlowScrollView>
</LinearLayout>
